Improved indexer Implemented constructor Added some properties and some methods to matrix

--- a/Matrix/Matrix.csproj
+++ b/Matrix/Matrix.csproj
@@ -49,6 +49,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Matrix.Portable\Matrix.Portable.csproj">
+      <Project>{c4c692a3-643a-4ae1-9304-ee2d03dc113a}</Project>
+      <Name>Matrix.Portable</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
