Added construct to calculate the determinant

--- a/Matrix/Matrix.Portable/Matrix.Portable.csproj
+++ b/Matrix/Matrix.Portable/Matrix.Portable.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DeterminantZeroException.cs" />
     <Compile Include="Matrix.cs" />
     <Compile Include="MatricesDontMatchException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
