--- a/Matrix/Matrix.Portable/Matrix.Portable.csproj
+++ b/Matrix/Matrix.Portable/Matrix.Portable.csproj
@@ -43,6 +43,7 @@
     <Compile Include="DeterminantZeroException.cs" />
     <Compile Include="Matrix.cs" />
     <Compile Include="MatricesDontMatchException.cs" />
+    <Compile Include="Point.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SquareMatrix.cs" />
   </ItemGroup>
