--- a/Matrix/Matrix.Portable/Matrix.Portable.csproj
+++ b/Matrix/Matrix.Portable/Matrix.Portable.csproj
@@ -40,13 +40,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DeterminantZeroException.cs" />
+    <Compile Include="Exception\DeterminantZeroException.cs" />
     <Compile Include="Matrix.cs" />
-    <Compile Include="MatricesDontMatchException.cs" />
+    <Compile Include="Exception\MatricesDontMatchException.cs" />
     <Compile Include="Point.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SquareMatrix.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
